# incubator

./: .dockerignore  .gitignore  .travis.yml  DEVELOPMENT.md  Dockerfile  Openings stats.ipynb  README.md  backup_db.sh  build.sh  docker-compose.yml  fabfile.py  final_requirements.txt  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-prod.in  requirements-prod.txt  requirements.in  requirements.txt  requirements_newiki.txt  setup.cfg  test.md  upgrade_postgres.sh
.github/workflows/: main.yml  pull_request.yml  push.yml
badges/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
badges/migrations/: 0001_initial.py  0002_auto_20191203_1750.py  0003_auto_20200929_0154.py  0004_auto_20211018_1916.py  0005_auto_20211027_2217.py  0005_auto_20211027_2232.py
badges/templates/: add_badgewear.html  approve_badge.html  badge_detail.html  badges_home.html  create_badge.html
events/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0001_squashed_0009_event_interested.py  0002_auto_20150324_2351.py  0002_auto_20151021_1739.py  0002_auto_20200807_0242.py  0003_auto_20151008_1211.py  0003_auto_20151103_1439.py  0003_auto_20200918_0020.py  0004_auto_20151117_1304.py  0004_auto_20200918_0025.py  0005_auto_20151125_1232.py  0005_conference_talks.py  0005_event_is_talk.py  0006_auto_20210415_2255.py  0006_auto_20210504_2120.py  0006_meeting_pad.py  0007_auto_20151125_1408.py  0008_auto_20151126_0850.py  (+6 more)
hackers/: admin.py  models.py  serializers.py  views.py
incubator/: README.md  admin.py  apiurls.py  drf.py  drf_permissions.py  hashers.py  lechbot.py  middleware.py  models.py  settings.py  urls.py  views.py  wsgi.py
manmail/: admin.py  models.py
materials/: models.py
nginx/: Dockerfile  nginx.conf
projects/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
propaganda/: apps.py  facebook.py  models.py
realtime/: README.md  __init__.py  apps.py  crossbarconnect.py  helpers.py  listener_demo.py  models.py
redir/: admin.py  models.py  views.py
space/: admin.py  context_processors.py  decorators.py  djredis.py  fakeredis.py  forms.py  helpers.py  maclist.py  models.py  plots.py  serializers.py  urls.py  views.py
stock/: __init__.py  actions.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
streams/: README.md  api_views.py  serializers.py  urls.py  views.py
users/: admin.py  api_auth.py  apps.py  decorators.py  forms.py  mixins.py  models.py  serializers.py  urls.py  utils.py  views.py
wiki/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+186 files in other folders)
