[tool.poetry]
name = "incubator"
version = "1.0.0"
description = "Django hackerspace website for UrLab"
authors = ["Members of the hackerspace"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
django-activity-stream = "^0.10.0"
django-bootstrap4 = "^21.1"
django-constance = "^2.8.0"
django-crispy-forms = "^1.13.0"
django-extensions = "^3.1.5"
django-filter = "^21.1"
django-simple-history = "^3.0.0"
wiki = "^0.7.9"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.2"
sentry-sdk = "^1.5.4"
django-picklefield = "^3.0.1"
django-resized = "^0.3.11"
requests = "^2.27.1"
redis = "^4.1.2"
ics = "^0.7"
influxdb = "^5.3.1"

[tool.poetry.dev-dependencies]
pyproject-flake8 = "6.0.0"
isort = "^5.10.1"
pycodestyle = "^2.8.0"
pyflakes = "^3.0.0"
pytest = "^6.2.5"
pylint = "^2.12.2"
pytest-django = "^4.5.1"

[tool.pytest]
norecursedirs = ["ve", "static", "media", ".git", "env", "venv", "v3", "ve3", "venv3", "env3"]
DJANGO_SETTINGS_MODULE="incubator.settings"
addopts = "--reuse-db --nomigrations"

[tool.flake8]
exclude = [".git", "migrations"]
max-line-length = 125
ignore=["E501", "F401", "E402", "F811", "E731", "F403"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
